# copilot-chat-transcribe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  data-model.md  demo.md  implementation-plan.md  progress.md  spec.md
examples/: demo_parse.py
src/copilot_chat_transcribe/: __init__.py  cli.py  connector.py  models.py  parser.py  renderer.py
